--- a/index.html
+++ b/index.html
@@ -8,60 +8,171 @@
   
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  
+  <script src="https://kit.fontawesome.com/4f2d06e34d.js" crossorigin="anonymous"></script>
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-  Try it free
+  <!--Navigation section-->
+  <nav>
+    <div class="logo"><img src="./images/logo.svg" alt="logo"></div>
+    <a href="#">Try It Free</a>
+  </nav>
+  <!--Intro-->
+  <div class="intro">
+    <h1>Build The Community Your Fans Will Love</h1>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+    <a href="#" class="cmn_btn">Get Started For Free</a>
+  </div>
 
-  Build The Community Your Fans Will Love
+  <!--Picture-->
+  <div class="image">
+    <img src="./images/screen-mockups.svg" alt="chart">
+  </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
+  <!--Stats-->
+  <div class="stats">
+    <div class="stats-child">
+      <img src="./images/icon-communities.svg" alt="">
+      <h1>1.4k+</h1>
+      <p>Communities Formed</p>
+    </div>
+    <div class="stats-child">
+      <img src="./images/icon-messages.svg" alt="">
+      <h1>2.7m+</h1>
+      <p>Messages Sent</p>
+    </div>
+  </div>
 
-  Get Started For Free
+  <!--Info-->
+  <img src="./images/bg-section-top-mobile-1.svg" alt="bgsection" class="topsection">
+  <img src="./images/bg-section-top-desktop-1.svg" alt="bgsection" class="desktopsection">
+  <div class="info_color">    
+  <div class="info">
+    <div class="info_img">
+      <img src="./images/illustration-grow-together.svg" alt="Grow Together">
+    </div>
+    <div class="description">
+      <h2>Grow Together</h2>
+      <p>Generate meaningful discussions with your audience and build a strong, loyal community.
+        Think of the insightful converations you miss out on with a feedback form.</p>
+    </div>
+  </div>
+</div>
+<img src="./images/bg-section-bottom-mobile-1.svg" alt="bgsection" class="topsection" style="margin-top: -2px;">
+<img src="./images/bg-section-bottom-desktop-1.svg" alt="bgsection" class="desktopsection" style="margin-top: -2px;">
+<!--Info 1 -->
 
-  1.4k+
-  Communities Formed
-
-  2.7m+
-  Messages Sent
-
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+<!--Info 2-->
+<div class="info flowing">
+  <div class="info_img">
+    <img src="./images/illustration-flowing-conversation.svg" alt="Flowing conversations">
+  </div>
+  <div class="description">
+    <h2>Flowing Conversations</h2>
+    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+      have just-in-time loading for a more natural flow
     </p>
-  </footer>
+  </div>
+</div>
+<!-- Info 2-->
+
+<!--Info 3-->
+<img src="./images/bg-section-top-mobile-2.svg" alt="bgsection" class="topsection">
+  <img src="./images/bg-section-top-desktop-2.svg" alt="bgsection" class="desktopsection">
+  <div class="info_color">    
+  <div class="info">
+    <div class="info_img">
+      <img src="./images/illustration-your-users.svg" alt="Grow Together">
+    </div>
+    <div class="description">
+      <h2>Your Users</h2>
+      <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app,
+        your users can start chatting immediately
+      </p>
+    </div>
+  </div>
+</div>
+<img src="./images/bg-section-bottom-mobile-2.svg" alt="bgsection" class="topsection" style="margin-top: -2px;">
+<img src="./images/bg-section-bottom-desktop-2.svg" alt="bgsection" class="desktopsection" style="margin-top: -2px;">
+
+<!--Info 3-->
+
+<!-- -->
+<!--Intro-->
+<div class="intro" style="margin: 50px auto;">
+  <h1>Ready To Build Your Community?</h1>
+  <a href="#" class="cmn_btn">Get Started For Free</a>
+</div>
+<!---->
+
+<img src="./images/bg-footer-top-mobile.svg" alt="bgfooter" class="f-m">
+<img src="./images/bg-footer-top-desktop.svg" alt="bgfooter" class="f-d">
+<footer>
+  <div class="newsletter">
+    <h3>NEWSLETTER</h3>
+      <p>To receive tips on how to grow your community, sign up to our weekly newsletter.
+        We'll never send you spam or pass on your email address
+      </p>
+      <div>
+        <input type="text">
+        <div>
+          <input type="submit" value="Subscribe" style="cursor: pointer;">
+        </div>
+      </div>
+      
+      
+
+  </div>
+  <div class="footer_info">
+    <div class="f_logo">
+      <img src="./images/logo.svg" alt="logo" style="color: #fff;">
+    </div>
+    <div class="f_descr">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero beatae blanditiis, ducimus quasi dolores culpa deleniti pariatur, placeat consequatur.
+    </div>
+    <div class="contact">
+      <div style="cursor: pointer;">
+        <i class="fa-solid fa-phone" style="color: #fff;"></i>
+      </div>
+      <div>
+        Phone: +1-543-123-4567
+      </div>
+    </div>
+    <div class="contact">
+      <div style="cursor: pointer;">
+        <i class="fa-solid fa-envelope" style="color:#fff;"></i>
+      </div>
+      <div>
+        example@company.com
+      </div>
+    </div>
+    <div class="f_socials">
+      <div style="cursor: pointer;">
+        <i class="fa-brands fa-square-facebook"></i>
+      </div>
+      <div style="cursor:pointer;">
+        <i class="fa-brands fa-instagram"></i>
+      </div>
+      <div style="cursor: pointer;">
+        <i class="fa-brands fa-square-twitter"></i>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
